--- a/style.css
+++ b/style.css
@@ -121,3 +121,50 @@ h1 {
 #wa-btn-img {
     width: 200px;
 }
+
+
+
+
+
+
+#cont_cv {
+  position: relative;
+  display: flex;
+  place-content: center;
+  align-items: flex-start;
+  width: 100%;
+  height: 100vh;
+}
+
+#cont_cv div {
+  width: 350px;
+  max-width: 80vw;
+  height: 130px;
+  position: absolute;
+  background-color: #f00;
+  will-change: rotatex, translatey;
+  visibility: hidden;
+}
+
+#cont_cv div:nth-child(-n + 2):after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  box-shadow: 0 -5px 40px -10px hwb(0deg 0% 100%);
+}
+
+#cont_cv div:nth-child(1) {
+  transform: translateY(0px);
+  z-index: 3;
+}
+
+#cont_cv .middle {
+  transform: translateY(130px);
+  z-index: 2;
+}
+
+#cont_cv .bottom {
+  transform: translateY(260px);
+  z-index: 1;
+}
