--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+html {
+  --shadow-alpha: 0;
+  --shadow-visibility: hidden;
+}
+
+
 body {
   margin: 0;
   background-image: url(img/BG.svg);
@@ -123,48 +129,65 @@ h1 {
 }
 
 
+.cutter-wrap {
+  position: absolute;
+  top: 0;
+  right: 0;
+  filter: drop-shadow(19px 1px 8px rgba(0, 0, 0, 0.75));
 
-
-
-
-#cont_cv {
-  position: relative;
-  display: flex;
-  place-content: center;
-  align-items: flex-start;
-  width: 100%;
-  height: 100vh;
+  pointer-events: none;
 }
 
-#cont_cv div {
+#cutter {
+  position: relative;
+  top: 0;
+  width: 120vh;
+  transform: translateX(-100vw) rotate(-15deg);
+}
+
+#contatti {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -143%);
   width: 350px;
-  max-width: 80vw;
+  height: 130px;
+
+  box-shadow: inset 0px 0px 12px -7px #00000080;
+}
+
+.contatti-container {
+  position: absolute;
+}
+
+.contatti-cover {
+  width: 350px;
+  /* max-width: 80vw; */
   height: 130px;
   position: absolute;
-  background-color: #f00;
+  background-color: white;
   will-change: rotatex, translatey;
-  visibility: hidden;
+
+  transform: translateY(130px);
+  z-index: 9;
+
+  border-bottom: black dashed;
 }
 
-#cont_cv div:nth-child(-n + 2):after {
+.contatti-cover:after {
   content: "";
   position: absolute;
+  visibility: var(--shadow-visibility);
+  opacity: var(--shadow-alpha);
+  top: 0;
+  left: 0;
   width: 100%;
   height: 100%;
-  box-shadow: 0 -5px 40px -10px hwb(0deg 0% 100%);
+  box-shadow: 10px 8px 40px -19px #00000080;
+  clip-path: polygon(0 0%, 100% 0, 110% 140%, -10% 140%);
 }
 
-#cont_cv div:nth-child(1) {
+#contatti div:nth-child(1) {
   transform: translateY(0px);
   z-index: 3;
-}
-
-#cont_cv .middle {
-  transform: translateY(130px);
-  z-index: 2;
-}
-
-#cont_cv .bottom {
-  transform: translateY(260px);
-  z-index: 1;
 }
