--- a/style.css
+++ b/style.css
@@ -1,70 +1,6 @@
-body {
-  margin: 0;
-  background-image: url(img/BG.svg);
-  background-repeat-y: no-repeat;
-
-  background-size: cover;
-}
-
-h1 {
-  font-size: 7rem;
-  font-family: "Montserrat Alternates", sans-serif;
-}
-
-#smooth-content {
-  height: 4000px;
-}
-
-.sezione {
-  width: 100vw;
-}
-
-.box {
-  width: 400px;
-  height: 400px;
-
-  position: absolute;
-  left: 0;
-  transform: translateX(-50%) rotate(45deg);
-  will-change: transform;
-
-  background-size: cover;
-}
-
-.box-a,
-.box-a2 {
-  left: 10px;
-  top: 200px;
-  width: 50vw;
-  height: 50vw;
-  background-image: url(img/cartone1.jpeg);
-  border-radius: 6px;
-
-  box-shadow: 4px 3px 10px 1px rgba(0, 0, 0, 0.75);
-}
-
-.box-a2 {
-  background-image: url(img/lino.jpeg);
-  transform: translateX(-50%) rotate(40deg);
-  box-shadow: 2px 2px 7px 0px rgba(0, 0, 0, 0.75);
-}
-
-.box-b {
-  top: 0;
-  left: 100%;
-  background-image: url(img/carta1-clipped.png);
-  transform: translateX(-50%) rotate(12deg);
-  background-size: contain;
-  background-repeat: no-repeat;
-  height: 70vh;
-  width: 40vw;
-}
-
-.box-wrap {
-  position: absolute;
-  top: 0;
-  right: 0;
-  filter: drop-shadow(3px 2px 4px rgba(0, 0, 0, 0.75));
+html {
+  --shadow-alpha: 0;
+  --shadow-visibility: hidden;
 }
 
 .cutter-wrap {
@@ -76,95 +12,56 @@ h1 {
   pointer-events: none;
 }
 
-@media (max-width: 800px) {
-  .box-a {
-    top: 20%;
-  }
-}
-
-.font1 {
-  font-size: 7rem;
-  font-family: "Montserrat Alternates", sans-serif;
-}
-
-.font2 {
-  font-size: 7rem;
-  font-family: "Montserrat Alternates", sans-serif;
-  font-weight: 100;
-}
-
 #cutter {
-    width: 120vh;
-    transform: rotate(-15deg);
-}
-
-.contatti {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-}
-
-#wa-btn {
-    background: none;
-    border: none;
-    padding: 0;
-    cursor: pointer;
-}
-
-.contatti-text {
-    font-family: 'Manrope', sans-serif;
-    padding: 12px;
-    font-size: medium;
-}
-
-#wa-btn-img {
-    width: 200px;
-}
-
-
-
-
-
-
-#cont_cv {
   position: relative;
-  display: flex;
-  place-content: center;
-  align-items: flex-start;
-  width: 100%;
-  height: 100vh;
+  top: 0;
+  width: 120vh;
+  transform: translateX(-100vw) rotate(-15deg);
 }
 
-#cont_cv div {
+#contatti {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -143%);
   width: 350px;
-  max-width: 80vw;
+  height: 130px;
+
+  box-shadow: inset 0px 0px 12px -7px #00000080;
+}
+
+.contatti-container {
+  position: absolute;
+}
+
+.contatti-cover {
+  width: 350px;
+  /* max-width: 80vw; */
   height: 130px;
   position: absolute;
-  background-color: #f00;
+  background-color: white;
   will-change: rotatex, translatey;
-  visibility: hidden;
+
+  transform: translateY(130px);
+  z-index: 9;
+
+  border-bottom: black dashed;
 }
 
-#cont_cv div:nth-child(-n + 2):after {
+.contatti-cover:after {
   content: "";
   position: absolute;
+  visibility: var(--shadow-visibility);
+  opacity: var(--shadow-alpha);
+  top: 0;
+  left: 0;
   width: 100%;
   height: 100%;
-  box-shadow: 0 -5px 40px -10px hwb(0deg 0% 100%);
+  box-shadow: 10px 8px 40px -19px #00000080;
+  clip-path: polygon(0 0%, 100% 0, 110% 140%, -10% 140%);
 }
 
-#cont_cv div:nth-child(1) {
+#contatti div:nth-child(1) {
   transform: translateY(0px);
   z-index: 3;
-}
-
-#cont_cv .middle {
-  transform: translateY(130px);
-  z-index: 2;
-}
-
-#cont_cv .bottom {
-  transform: translateY(260px);
-  z-index: 1;
 }
