--- a/style.css
+++ b/style.css
@@ -149,15 +149,24 @@ h1 {
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -143%);
+  transform: translate(-50%, 92%);
   width: 350px;
   height: 130px;
 
   box-shadow: inset 0px 0px 12px -7px #00000080;
+
+  background-color: #e9e9ff;
 }
 
 .contatti-container {
   position: absolute;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
 }
 
 .contatti-cover {
@@ -171,7 +180,8 @@ h1 {
   transform: translateY(130px);
   z-index: 9;
 
-  border-bottom: black dashed;
+  border: #00000040 solid 1px;
+  border-bottom: #00000060 dashed;
 }
 
 .contatti-cover:after {
