--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 html {
   --shadow-alpha: 0;
   --shadow-visibility: hidden;
+  overflow-x: hidden;
 }
 
 body {
@@ -13,7 +14,7 @@ h1 {
 }
 
 #smooth-content {
-  height: 5000px;
+  height: 7000px;
 
   background-color: #e9e9ff;
 }
@@ -214,7 +215,7 @@ h1 {
   top: 0;
   left: 0;
   width: 100%;
-  height: 52%;
+  height: 70%;
 
   background-image: url(img/BG-Tagliato@4x.png);
   background-repeat-y: no-repeat;
@@ -241,4 +242,18 @@ h1 {
   align-items: flex-end;
   justify-content: center;
   padding-bottom: 30px;
+}
+
+#sez-2 {
+  display: flex;
+  width: 300vw;
+}
+
+#sez-2 section {
+  width: 100vw;
+  height: 100vh;
+}
+
+#sez-2 .font2 {
+  font-size: 6rem;
 }
