--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ h1 {
 }
 
 #smooth-content {
-  height: 7000px;
+  height: 6500px;
 
   background-color: #e9e9ff;
 }
@@ -215,9 +215,9 @@ h1 {
   top: 0;
   left: 0;
   width: 100%;
-  height: 70%;
+  height: 80%;
 
-  background-image: url(img/BG-Tagliato@4x.png);
+  background: url(img/BG-Tagliato@4x.png) bottom;
   background-repeat-y: no-repeat;
 
   background-size: cover;
