--- a/style.css
+++ b/style.css
@@ -29,10 +29,13 @@ h1 {
 
   position: absolute;
   left: 0;
-  transform: translateX(-50%) rotate(45deg);
   will-change: transform;
 
   background-size: cover;
+}
+
+.box-a {
+  transform: translate(-50%, 8%) rotate(50deg);
 }
 
 .box-a,
@@ -49,7 +52,7 @@ h1 {
 
 .box-a2 {
   background-image: url(img/lino.jpeg);
-  transform: translateX(-50%) rotate(40deg);
+  transform: translate(-50%, 15%) rotate(40deg);
   box-shadow: 2px 2px 7px 0px rgba(0, 0, 0, 0.75);
 }
 
@@ -57,7 +60,7 @@ h1 {
   top: 0;
   left: 100%;
   background-image: url(img/carta1-clipped.png);
-  transform: translateX(-50%) rotate(12deg);
+  transform: translate(-50%, 8%) rotate(12deg);
   background-size: contain;
   background-repeat: no-repeat;
   height: 70vh;
@@ -78,12 +81,6 @@ h1 {
   filter: drop-shadow(19px 1px 8px rgba(0, 0, 0, 0.75));
 
   pointer-events: none;
-}
-
-@media (max-width: 800px) {
-  .box-a {
-    top: 20%;
-  }
 }
 
 .font1 {
@@ -208,6 +205,9 @@ h1 {
 .main-content {
   margin: 0;
   position: absolute;
+
+  overflow-x: hidden;
+  max-width: 100vw;
 }
 
 .main-content .bg {
@@ -256,4 +256,30 @@ h1 {
 
 #sez-2 .font2 {
   font-size: 6rem;
+}
+
+@media (max-width: 800px) {
+  .box-a {
+    transform: translate(-50%, 50%) rotate(50deg);
+  }
+  .box-a2 {
+    transform: translate(-50%, 60%) rotate(50deg);
+  }
+  .box-b {
+    transform: translate(-60%, 38%) rotate(26deg);
+    width: 60vw;
+  }
+
+  .font1 {
+    font-size: clamp(1rem, 20vw, 7rem);
+  }
+  .font2 {
+    font-size: clamp(1rem, 20vw, 7rem);
+  }
+  #sez-2 .font2 {
+    font-size: clamp(1rem, 13vw, 6rem);
+  }
+  .font3 {
+    font-size: clamp(.5rem, 20vw, 1rem);
+  }
 }
