--- a/style.css
+++ b/style.css
@@ -258,6 +258,11 @@ h1 {
   font-size: 6rem;
 }
 
+.font1, .font2, .font3 {
+  margin-left: 8px;
+  margin-right: 8px;
+}
+
 @media (max-width: 800px) {
   .box-a {
     transform: translate(-50%, 50%) rotate(50deg);
