--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@ h1 {
 }
 
 .box-a2 {
-  background-image: url(img/lino.jpeg);
+  background-image: url(img/lino.jpg);
   transform: translate(-50%, 15%) rotate(40deg);
   box-shadow: 2px 2px 7px 0px rgba(0, 0, 0, 0.75);
 }
